--- a/project-1.2V2/styles.css
+++ b/project-1.2V2/styles.css
@@ -186,7 +186,7 @@ main {
     transform: translateX(-100%);
 }
 
-.switch:active:after {
+input[type="checkbox"]:active:after {
     width: var(--input-toggle-active);
 }
 
