--- a/project-1.2V2/src/todo.css
+++ b/project-1.2V2/src/todo.css
@@ -1,4 +1,4 @@
-li-todo .list-item {
+to-do-item .list-item {
     display: flex;
     flex-direction: row;
     height: 100%;
@@ -9,13 +9,13 @@ li-todo .list-item {
     margin-bottom: var(--list-item-gap);
 }
 
-li-todo .list-item div{
+to-do-item .list-item div{
     position: relative;
     flex: 1 1 auto;
     height: 100%;
 }
 
-li-todo .list-item div[data-content]:after {
+to-do-item .list-item div[data-content]:after {
     content: attr(data-content);
     position: absolute;
     left: 1rem;
@@ -29,13 +29,13 @@ li-todo .list-item div[data-content]:after {
     background-color: var(--color-default);
 }
 
-li-todo .list-item div[data-selected=true]:before {
+to-do-item .list-item div[data-selected=true]:before {
     transform: scaleY(1); 
     transition:transform 0.3s ease-out;
     transform-origin: center;
 }
 
-li-todo .list-item div:before {
+to-do-item .list-item div:before {
     content: "";
     position: absolute;
     top: calc(50% - var(--input-height)/2);
