--- a/project-1.2V2/styles.css
+++ b/project-1.2V2/styles.css
@@ -34,152 +34,6 @@ body {
     flex-direction: column;
 }
 
-.default-button {
-    width: 4rem;
-    height: 1.5rem;
-    border-radius: 5%;
-    color: var(--color-default);
-    border: none;
-}
-
-.default-header>* {
-    margin: 0.5rem;
-}
-
-.default-header>textarea {
-    width: inherit;
-    height: 1rem;
-    vertical-align: middle;
-}
-
-.default-header {
-    display: none;
-    flex-direction: row;
-    align-items: center;
-    background-color: var(--color-toolbar);
-}
-
-.button-new {
-    background-color: var(--color-new);
-}
-
-.button-delete {
-    background-color: var(--color-delete);
-}
-
-.input-todo{
-    flex: 1 1 auto;
-}
-
-main {
-    background-color: var(--color-page);
-    width: 100%;
-    flex: 1 1 auto;
-    overflow: auto;
-}
-
-.list {
-    margin: 0;
-    padding: 0;
-}
-
-input[type="checkbox"] {
-    position: relative;
-    flex: 0 0 var(--input-width);
-    height: var(--input-height);
-    margin-right: var(--default-padding);
-}
-
-input[type="checkbox"]:before {
-    content: '';
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: var(--input-width);
-    height: var(--input-height);
-    background: var(--color-default);
-    display: block;
-    border-radius: var(--input-height);
-    border: var(--input-border) solid var(--color-border);
-}
-
-input[type="checkbox"]:after {
-    content: '';
-    position: absolute;
-    top: 0.1rem;
-    left: 0;
-    width: var(--input-button-diameter);
-    height: var(--input-button-diameter);
-    background: var(--color-default);
-    border-radius: var(--input-button-diameter);
-    transition: 0.3s;
-    border: var(--input-border) solid var(--color-border);
-    box-shadow: 0 0 1px 1px var(--color-border);
-}
-
-input[type="checkbox"]:checked:before {
-    background: var(--color-toggle);
-}
-
-input[type="checkbox"]:checked:after {
-    left: calc(var(--input-width) + var(--input-border)*2);
-    transform: translateX(-100%);
-}
-
-input[type="checkbox"]:active:after {
-    width: var(--input-toggle-active);
-}
-
-.todo-add{
-    flex-direction: row;
-    align-items: center;
-    background-color: var(--color-toolbar);
-    display: none;
-}
-
-.todo-add >*{
-    margin: 0.5rem;
-}
-
-.todo-add textarea{
-    width: inherit;
-    height: 1rem;
-    vertical-align: middle;
-}
-
-header section[data-display=true]{
-    display: flex;
-}
-
-button:disabled{
-    opacity: 0.5;
-}
-
-.button-new-todo:after{
-    content: 'New';
-}
-
-.default-header[data-is-deleting="true"] .button-new-todo:after{
-    content: 'No';
-}
-
-.button-delete-todo:after{
-    content: 'Delete';
-}
-
-.default-header[data-is-deleting="true"] .button-delete-todo:after{
-    content: 'Yes';
-}
-
-.span-todo-deleting{
-    display: none;
-    text-align: center;
-}
-.default-header[data-is-deleting="true"] .span-todo-deleting{
-    display: block;
-}
-
-.default-header[data-is-deleting="true"] .input-search-todo{
-    display: none;
+main{
+    height: 100%;
 }
