1. Code review comments from JR 2. Project 1.3, initial stuff

--- a/project-1.2V2/src/todoList.css
+++ b/project-1.2V2/src/todoList.css
@@ -135,6 +135,6 @@ button:disabled{
     background-color: var(--color-delete);
 }
 
-section[data-display=true]{
+div[data-display=true]{
     display: flex;
 }
