--- a/project-1.2V2/src/todo.css
+++ b/project-1.2V2/src/todo.css
@@ -1,21 +1,22 @@
-to-do-item .list-item {
+.list-item {
     display: flex;
     flex-direction: row;
     height: 100%;
-        align-items: center;
+    align-items: center;
     height: var(--list-item-height);
     list-style: none;
     background-color: var(--color-default);
     margin-bottom: var(--list-item-gap);
 }
 
-to-do-item .list-item div{
+.list-item div{
     position: relative;
     flex: 1 1 auto;
     height: 100%;
+    pointer-events: none;
 }
 
-to-do-item .list-item div[data-content]:after {
+.list-item div[data-content]:after {
     content: attr(data-content);
     position: absolute;
     left: 1rem;
@@ -29,13 +30,13 @@ to-do-item .list-item div[data-content]:after {
     background-color: var(--color-default);
 }
 
-to-do-item .list-item div[data-selected=true]:before {
+.list-item div[data-selected=true]:before {
     transform: scaleY(1); 
     transition:transform 0.3s ease-out;
     transform-origin: center;
 }
 
-to-do-item .list-item div:before {
+.list-item div:before {
     content: "";
     position: absolute;
     top: calc(50% - var(--input-height)/2);
@@ -47,12 +48,3 @@ to-do-item .list-item div:before {
     transition:transform 0.3s ease-out;
     transform-origin: center;
 }
-
-/*.list-item div[data-content]:active::after {
-    text-overflow: unset;
-    white-space: normal;
-    border: 1px solid var(--color-border);
-    z-index: 1000;
-    box-shadow: 0 0 10px 0 var(--color-border);
-    padding: 0.5rem;
-}*/
