--- a/project-1.2V2/styles.css
+++ b/project-1.2V2/styles.css
@@ -37,3 +37,51 @@ body {
 main{
     height: 100%;
 }
+
+input[type="checkbox"] {
+    position: relative;
+    flex: 0 0 var(--input-width);
+    height: var(--input-height);
+    margin-right: var(--default-padding);
+}
+
+input[type="checkbox"]:before {
+    content: '';
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: var(--input-width);
+    height: var(--input-height);
+    background: var(--color-default);
+    display: block;
+    border-radius: var(--input-height);
+    border: var(--input-border) solid var(--color-border);
+}
+
+input[type="checkbox"]:after {
+    content: '';
+    position: absolute;
+    top: 0.1rem;
+    left: 0;
+    width: var(--input-button-diameter);
+    height: var(--input-button-diameter);
+    background: var(--color-default);
+    border-radius: var(--input-button-diameter);
+    transition: 0.3s;
+    border: var(--input-border) solid var(--color-border);
+    box-shadow: 0 0 1px 1px var(--color-border);
+}
+
+input[type="checkbox"]:checked:before {
+    background: var(--color-toggle);
+}
+
+input[type="checkbox"]:checked:after {
+    left: calc(var(--input-width) + var(--input-border)*2);
+    transform: translateX(-100%);
+}
+
+input[type="checkbox"]:active:after {
+    width: var(--input-toggle-active);
+}
